--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@types/jest": "^29.5.12",
 		"@types/node": "^16.11.6",
+		"@types/pluralize": "^0.0.33",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -25,5 +26,8 @@
 		"ts-jest": "^29.1.2",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"pluralize": "^8.0.0"
 	}
 }
