--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-pacer-plans",
-	"name": "Obsidian Pacer Plans",
+	"name": "Pacer Plans",
 	"version": "0.4.0",
 	"minAppVersion": "0.15.0",
-	"description": "Pace out your tasks and plans in Obsidian.",
+	"description": "Reading a book? Writing a paper? Studying for a test? Pacer Plans helps you average out your work into a series of equal tasks over a specified time period. Miss a day or two? No problem! Simply recalculate the Pacer Plan to automatically adjust your remaining tasks and keep you on track.",
 	"author": "Ky Kartchner",
 	"authorUrl": "https://github.com/kkartch0",
 	"isDesktopOnly": false
